--- a/similEsami/2021-07-12/soluzioni/soluzione(2021-07-12).tex
+++ b/similEsami/2021-07-12/soluzioni/soluzione(2021-07-12).tex
@@ -365,6 +365,387 @@
                 \hline
             \end{tabular}
             $\xRightarrow{\text{pf}=5}$
-            %sbagliato da qua in poi, da rifare
+            \begin{tabular}{|c|c|c|}
+                \hline
+                6 & 5 & 3\\
+                \hline
+                4 & 1 & 2\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=5}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                6 & 5 & 7\\
+                \hline
+                4 & 1 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=6}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                6 & 8 & 7\\
+                \hline
+                4 & 5 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                9 & 8 & 7\\
+                \hline
+                1 & 5 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=8}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                9 & 8 & 10\\
+                \hline
+                1 & 5 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=8}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                9 & 11 & 10\\
+                \hline
+                1 & 2 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=9}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                12 & 11 & 10\\
+                \hline
+                4 & 2 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=10}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                12 & 11 & 13\\
+                \hline
+                4 & 2 & 5\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=11}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                12 & 14 & 13\\
+                \hline
+                4 & 6 & 5\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=12}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                15 & 14 & 13\\
+                \hline
+                1 & 6 & 5\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=13}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                15 & 14 & 16\\
+                \hline
+                1 & 6 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=14}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                15 & 17 & 16\\
+                \hline
+                1 & 4 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=15}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                18 & 17 & 16\\
+                \hline
+                6 & 4 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=16}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                18 & 19 & 16\\
+                \hline
+                6 & 4 & 3\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=16}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                18 & 19 & 20\\
+                \hline
+                6 & 4 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=17}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                18 & 21 & 20\\
+                \hline
+                6 & 4 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=17}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                22 & 21 & 20\\
+                \hline
+                6 & 4 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=17}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                22 & 21 & 23\\
+                \hline
+                6 & 4 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=17}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                22 & 24 & 23\\
+                \hline
+                6 & 3 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=18}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                25 & 24 & 23\\
+                \hline
+                4 & 3 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=19}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                25 & 24 & 26\\
+                \hline
+                4 & 3 & 2\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=20}$
+            Termino con un totale di 20 page fault.
+        \item \emph{Ideale}:\\
+        Come dice il nome questo è un algoritmi perfetto, perchè dovrebbe prevedere il futuro, infatti dovrebbe sapere quali saranno le prossime richieste che un pogramma potrebbe fare.\\
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & null & null\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=1}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & null\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=2}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=3}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=4}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=4}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=4}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=4}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 5\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=5}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 5\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=5}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 5\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=5}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 3 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=7}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 5 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=8}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=9}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=9}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=10}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=10}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=10}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=10}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=11}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=11}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=11}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=11}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=12}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            3 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=12}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            2 & 6 & 4\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=13}$
+        Termino con un totale di 13 page fault.
     \end{itemize}
+    \section*{Domanda 5}
+    \textbf{MAX PUNTI:} 8\\
+    \textbf{Domanda:}
+
+
+    Si ipotizzi di avere una toilette pubblica unisex che viene gestita secondo i seguenti punti:\\
+    \begin{enumerate}
+        \item La toilette può essere libera, occupata da donnae, occupata da uomini.
+        \item Se è libera la persona che arriva la occupa.
+        \item Se la toilette è occupata da una o più donne, possono entrare solo donne.
+        \item Se la toilette è occupata da uno o più uomini, possono entrare solo uomini.
+    \end{enumerate}
+    Progettare un sistema per la sincronizzazione con il metodo che si vuole.\\
+    Non fare alcuna assunzione sul numero di uomini/donne.\\
+    \textbf{Soluzione:}
+    \begin{center}
+        \emph{Variabili in comune}
+        \begin{lstlisting}
+            Toilette wc; //Risorsa da usare
+            List<Uomo> codaMaschile; //Coda attesa maschile
+            List<Donna> codaFemminile; //Coda attesa femminile
+            Monitor monitor=free;  //Inizialmente il monitor segna la toilette come libera
+        \end{lstlisting}
+    \end{center}
+    \begin{lstlisting}
+        Uomo(){
+            while(true){
+                codaMaschile.append(new Uomo());
+                if(monitor.isFree()){
+                    monitor.lock();
+                    while(codaMaschile.isNotEmpty()){
+                        Uomo tmp=codaMaschile.remove();
+                        tmp.use(wc);
+                    }
+                    monitor.free();
+                }
+            }
+        }
+    \end{lstlisting}
+    \begin{lstlisting}
+        Donna(){
+            while(true){
+                codaFemminile.append(new Donna());
+                if(monitor.isFree()){
+                    monitor.lock();
+                    while(codaFemminile.isNotEmpty()){
+                        Uomo tmp=codaFemminile.remove();
+                        tmp.use(wc);
+                    }
+                    monitor.free();
+                }
+            }
+        }
+    \end{lstlisting}
 \end{document}
