Rimozione file temporanei

--- a/similEsami/2021-07-05/soluzione/soluzione(2021-07-05).tex
+++ b/similEsami/2021-07-05/soluzione/soluzione(2021-07-05).tex
@@ -5,4 +5,17 @@
 
 \begin{document}
     \maketitle
+    \section*{Domanda 1}
+    \textbf{MAX PUNTI:} 6\\
+    \textbf{Domanda:}
+
+    Si descriva il concetto di paginazione.\\
+    In seguito data la stringa 0, 1, 2, 3, 0, 2, 1, 2, 1, 0, 1, 2, 3 calcolare il numero di page fault con gli algoritmi FIFO, LRU con 3 frame a disposizione, mostrare il contenuto della memoria passo passo.\\
+    \textbf{Soluzione:}
+
+
+    \begin{itemize}
+        \item \emph{FIFO}:\\
+            Il metodo \emph{FIFO} gestisce la memeoria come una semplice coda, il primo segmaneto ad essere entrato è il primo ad essere fatto uscire.\\
+    \end{itemize}
 \end{document}
