--- a/similEsami/2021-07-05/soluzione/soluzione(2021-07-05).tex
+++ b/similEsami/2021-07-05/soluzione/soluzione(2021-07-05).tex
@@ -1,4 +1,6 @@
 \documentclass{article}
+\usepackage[margin=1.5cm]{geometry}
+\usepackage{mathtools}
 \title{Esame 2021/07/05}
 \author{Blascovich Alessio}
 \date{}
@@ -14,8 +16,223 @@
     \textbf{Soluzione:}
 
 
+    La paginazione è una tecnica per la gestione della memoria che punta ad eliminare la frammentazione esterna.\\
+    Questo è reso possibile grazie alla non continuità dello spazio assegnato ad un processo, così facendo si può allocare qualsiasi frame di memoria a patto che sia libero.\\
+    Divide la memoria fisica in blocchi di dimensione fissa detti \emph{frame} e la memoria logina in blocchi di uguali dimensioni detti \emph{pagine}.\\
+    Per avviare un processo grande $n$ pagine devo trovare $n$ frame liberi, per effettuare questa ricerca si usa una cosidetta \emph{page table} cioè una tabella che tiene traccia a quale processo è associato ogni frame.\\
+    Si assuma pf l'acronimo di page fault.
     \begin{itemize}
         \item \emph{FIFO}:\\
             Il metodo \emph{FIFO} gestisce la memeoria come una semplice coda, il primo segmaneto ad essere entrato è il primo ad essere fatto uscire.\\
+            \begin{tabular}{|c|c|c|}
+                \hline
+                0 & null & null\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=1}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                0 & 1 & null\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=2}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                0 & 1 & 2\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=3}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                3 & 1 & 2\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=4}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                3 & 0 & 2\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=5}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                3 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=6}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 0 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=7}$
+            \begin{tabular}{|c|c|c|}
+                \hline
+                2 & 3 & 1\\
+                \hline
+            \end{tabular}
+            $\xRightarrow{\text{pf}=8}$
+            Termino con un totale di 8 page fault.
+        \item \emph{LRU}:\\
+        L'algoritmo \emph{LRU} tiene associato ad ogni frame il clock della CPU nell'istante in cui quel frame è stato usato per l'ultima volta, verrà tolto il frame che non viene usato da più tempo.\\
+        Nella prima riga sono indicati gli istanti, mentre nella seconda il numero del frame.\\
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & null & null\\
+            \hline
+            0 & null & null\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=1}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 2 & null\\
+            \hline
+            0 & 1 & null\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=2}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            1 & 2 & 3\\
+            \hline
+            0 & 1 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=3}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            4 & 2 & 3\\
+            \hline
+            3 & 1 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=4}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            4 & 5 & 3\\
+            \hline
+            3 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=5}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            4 & 5 & 6\\
+            \hline
+            3 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=5}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            7 & 5 & 6\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            7 & 5 & 8\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            9 & 5 & 8\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            9 & 10 & 8\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            11 & 10 & 8\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            11 & 10 & 12\\
+            \hline
+            1 & 0 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=6}$
+        \begin{tabular}{|c|c|c|}
+            \hline
+            11 & 13 & 12\\
+            \hline
+            1 & 3 & 2\\
+            \hline
+        \end{tabular}
+        $\xRightarrow{\text{pf}=7}$
+        Termino con un totale di 7 page fault.
     \end{itemize}
+    \section*{Domanda 2}
+    \textbf{MAX PUNTI:} 6\\
+    \textbf{Domanda:}
+
+    Spiegare nel dettaglio che casi di frammentazione esterna/interna posso avere con la paginazione.\\
+    Spiegare perchè il fyle system di tipo FAT non è efficente per l'accesso diretto e per file di grandi dimensioni.\\
+    \textbf{Soluzione:}
+
+
+    Onestamente non ho capito la prima parte della domanda, perchè la paginazione in pratica ha solo un minimo di frammentazione interna e 0 frammentazione esterna.\\
+    FAT è un tipo di file system usato in passato da microsoft, si basa su una lista concatenata ma che anzichè puntare ad un singolo blocco punta ad un'area di disco contigua.\\
+    Questo migliora l'accesso casuale ma l'efficenza rimane comunque paragonabile a quella dell'allocazione a lista.\\
+    La dimensione massima di un file in FAT32 è 4GB questo per motivi di efficenza(tempi di risposta), infatti è pur sempre una lista concatenata quindi devo scorrere tutto il file per arrivare alla fine di esso.\\
+    Infatti se mi devo spostare all'interno di uno stesso insieme di blocchi(extent) allora il tempo di acesso è costante mentre se devo cercare un blocco al di fuori di un extent il tempo diventa lieare.
+    \section*{Domanda 3}
+    \textbf{MAX PUNTI:} 6\\
+    \textbf{Domanda:}
+
+
+    Dato un calcolatore con memoria virtuale che sfrutta la segmentazione paginata con pagine da 8KB, 7 segmenti(1023 pagine ogni frammento) e una memoria fisica da 512MB con 32bit per l'indirizzamento.\\
+    Si calcoli:
+    \begin{enumerate}
+        \item Quanti bit devo usare per rappresentare gli indirizzi virtuali?
+        \item Quanti bit devo usare per rappresentare gli indirizzi fisici?
+    \end{enumerate}
+    \textbf{Soluzione:}
+
+
+    
 \end{document}
